--- a/demo.ipynb
+++ b/demo.ipynb
@@ -128,9 +128,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "for img_num in range(100):\n",
+    "N = 10\n",
     "\n",
-    "    print(f'ITERATION: {img_num} OF 100')\n",
+    "for img_num in range(N):\n",
+    "\n",
+    "    print(f'ITERATION: {img_num} OF {N}')\n",
     "\n",
     "    # Select number of nodes\n",
     "    amount_lv = random.randint(2, 5)\n",
@@ -150,6 +152,34 @@
     "    sem_gen.generate_dot_fc(2)\n",
     "    # Generate two graph images using the circo engine\n",
     "    sem_gen.generate_circo(2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Augment graph images (adding document background noise and gaussian blurring)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from bg_augmentation import augment_background\n",
+    "\n",
+    "path2imgs = 'images'\n",
+    "path2bgs = 'backgrounds'\n",
+    "\n",
+    "augment_background(path2imgs, path2bgs, display=True)"
    ],
    "metadata": {
     "collapsed": false,
